전체 디자인 수정

--- a/backend/app/project/static/templates/_left-side.html
+++ b/backend/app/project/static/templates/_left-side.html
@@ -7,7 +7,7 @@
            -->
                   <li class="active">
                      <a href="#" title="Cloud" data-toggle="collapse-next" class="has-submenu">
-                        <em class="fa fa-file-text-o"></em>
+                        <em class="fa fa-thumb-tack"></em>
                         <span class="item-text">클라우드</span>
                      </a>
                      <!-- START SubMenu item-->
@@ -32,7 +32,7 @@
                   </li>
                   <li >
                      <a href="#" title="others" data-toggle="collapse-next" class="has-submenu">
-                        <em class="fa fa-file-text-o"></em>
+                        <em class="fa fa-tags"></em>
                         <span class="item-text">기타</span>
                      </a>
                      <!-- START SubMenu item-->
