--- a/backend/app/project/static/templates/_menu.html
+++ b/backend/app/project/static/templates/_menu.html
@@ -7,7 +7,9 @@
             <img src="/static/app/img/logo.png" alt="App Logo" class="img-responsive">
          </div>
          <div class="brand-logo-collapsed">
-            <img src="/static/app/img/logo-single.png" alt="App Logo" class="img-responsive">
+            <em class="fa fa-cloud" alt="App Logo" style="margin-top: 10px;"></em>
+            
+            <!-- <img src="/static/app/img/logo-single.png" alt="App Logo" class="img-responsive"> -->
          </div>
       </a>
     </div>
@@ -15,7 +17,6 @@
     <!-- START Nav wrapper-->
     <div class="nav-wrapper">
        <!-- START Left navbar-->
-       
        <ul class="nav navbar-nav">
           <li>
              <!-- Button used to collapse the left sidebar. Only visible on tablet and desktops-->
