--- a/backend/app/project/templates/new/landing_ori.html
+++ b/backend/app/project/templates/new/landing_ori.html
@@ -67,7 +67,7 @@
          <nav class="row" style="margin: 20px;">
             <div class="col-md-2 app-logo">
                <a href="#" class="logo-wrapper">
-                  <img src="/static/app/img/logo.png" alt="App Name" class="img-responsive">
+                  <img src="/static/app/img/blackcloudlogo.png" alt="App Name" class="img-responsive">
                </a>
             </div>
             <div class="col-md-10">
