landing 페이지 완성

--- a/backend/app/project/templates/cloud/list.html
+++ b/backend/app/project/templates/cloud/list.html
@@ -14,7 +14,7 @@
    <meta name="description" content="">
    <meta name="keywords" content="">
    <meta name="author" content="">
-   <title>Wintermin - Bootstrap Admin Theme</title> 
+   <title>Somecloud-Dashboard</title> 
     <link rel="stylesheet" href="/static/app/css/views/cloudlist2.css" type="text/css" />
 </head>
 
