--- a/backend/app/project/templates/keypair/add.html
+++ b/backend/app/project/templates/keypair/add.html
@@ -16,7 +16,7 @@
    <meta name="description" content="">
    <meta name="keywords" content="">
    <meta name="author" content="">
-   <title>Wintermin - Bootstrap Admin Theme</title> 
+   <title>Somecloud</title> 
 </head>
 
 <body>
