--- a/backend/app/project/templates/new/signup.html
+++ b/backend/app/project/templates/new/signup.html
@@ -6,7 +6,7 @@
    <meta name="description" content="">
    <meta name="keywords" content="">
    <meta name="author" content="">
-   <title>Wintermin - Bootstrap Admin Theme</title>
+   <title>Somecloud</title>
    
    <link rel="stylesheet" href="../app/css/bootstrap.css">
    <link rel="stylesheet" href="../vendor/fontawesome/css/font-awesome.min.css">
