--- a/backend/app/project/templates/user/profile.html
+++ b/backend/app/project/templates/user/profile.html
@@ -14,7 +14,7 @@
    <meta name="description" content="">
    <meta name="keywords" content="">
    <meta name="author" content="">
-   <title>Wintermin - Bootstrap Admin Theme</title> 
+   <title>Somecloud-UserProfile</title> 
 </head>
 
 <body>
