--- a/backend/app/project/templates/cloud/add.html
+++ b/backend/app/project/templates/cloud/add.html
@@ -15,7 +15,7 @@
    <meta name="description" content="">
    <meta name="keywords" content="">
    <meta name="author" content="">
-   <title>Wintermin - Bootstrap Admin Theme</title> 
+   <title>Somecloud</title> 
 </head>
 
 <body>
