--- a/backend/app/project/templates/support/list.html
+++ b/backend/app/project/templates/support/list.html
@@ -24,7 +24,7 @@
    <meta name="description" content="">
    <meta name="keywords" content="">
    <meta name="author" content="">
-   <title>Wintermin - Bootstrap Admin Theme</title> 
+   <title>Somecloud-Support</title> 
 </head>
 
 <body>
