--- a/backend/app/project/templates/secgroup/detail.html
+++ b/backend/app/project/templates/secgroup/detail.html
@@ -86,8 +86,8 @@
                            </table>
                            <div class="container">
                               <br>
-                              <p>보안 그룹을 더 생성할 수 있습니다.</p>
-                              <a href="{{ url_for('secgroup.sec_add', secgroup_id=groupid)}}" class="mb-sm btn btn-default" style="align-items: center;">방화벽 생성</a>
+                              <p>방화벽 규칙을 더 생성할 수 있습니다.</p>
+                              <a href="{{ url_for('secgroup.sec_add', secgroup_id=groupid)}}" class="mb-sm btn btn-default" style="align-items: center;">규칙 생성</a>
                            </div>
                         </div>
                      </div>
