--- a/backend/app/project/templates/cloud/detail.html
+++ b/backend/app/project/templates/cloud/detail.html
@@ -178,6 +178,7 @@
                 <fieldset>
                     <div class="col-md-12">
                         <h3>App Status</h3>  
+                        {{ app_status }}
                     </div>
                 </fieldset>
                 
