비밀번호 찾ㄱ ㅣroute 변경

--- a/backend/app/project/templates/new/login.html
+++ b/backend/app/project/templates/new/login.html
@@ -52,7 +52,7 @@
                            <input type="checkbox" value="">
                            <span class="fa fa-check"></span>Remember Me</label>
                      </div>
-                     <div class="pull-right"><a href="recover.html" class="text-muted" style="text-decoration: none;">Forgot your password?</a>
+                     <div class="pull-right"><a href="/reset" class="text-muted" style="text-decoration: none;">Forgot your password?</a>
                      </div>
                   </div>
                   <input type="submit" value="Log In" class="btn btn-lg btn-success login_btn_submit">
