--- a/backend/app/project/templates/new/login.html
+++ b/backend/app/project/templates/new/login.html
@@ -27,7 +27,7 @@
          <div data-toggle="play-animation" data-play="fadeIn" data-offset="0" class="panel panel-dark panel-flat">
             <div class="panel-heading text-center">
                <a href="#">
-                  <img src="/static/app/img/logo.png" alt="Image" class="block-center img-rounded">
+                  <img src="/static/app/img/cloudlogo.png" alt="Image" class="block-center img-rounded">
                </a>
                <p class="text-center mt-lg">
                   <strong>Login</strong>
