CPU 사용량 모니터링

--- a/backend/app/project/templates/cloud/detail.html
+++ b/backend/app/project/templates/cloud/detail.html
@@ -132,6 +132,21 @@
                     </div>
                 </fieldset> -->
                 
+               <fieldset>
+                    <div class="col-md-12">
+                        <h4 class="page-header">CPU Usage
+                            <small> CPU 사용량</small>
+                         </h4>
+                        <div class="panel panel-default">
+                            <div class="panel-body text-center">
+                                <div class="col-md-6">
+                                    <img src="/cloud/detail/{{ cloudid }}/CPUUtilization/1">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </fieldset>
+               
                 <fieldset>
                     <div class="col-md-12">
                         <h4 class="page-header">Network Usage (Inbound)
